# Production-Ready-FastAPI-SaaS-Boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_READY.md  LICENSE  QUICKSTART.md  README.md  READY_TO_PUSH.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
alembic/: README  env.py
app/: __init__.py  main.py
app/api/: deps.py  error_handlers.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  health.py  tasks.py  tenants.py  users.py
app/core/: circuit_breaker.py  config.py  decorators.py  logging.py  security.py
app/db/: __init__.py  session.py
app/middleware/: __init__.py  logging.py  rate_limit.py  security.py  tenant.py
app/models/: __init__.py  base.py  refresh_token.py  role.py  tenant.py  user.py
app/repositories/: base.py  tenant.py  user.py
app/schemas/: auth.py  error.py  task.py  tenant.py  user.py
app/services/: auth.py  cache.py  user.py
app/worker/: __init__.py  celery_app.py  tasks.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: api.md  architecture.md  database.md
scripts/: init_db.py  run_migrations.sh  seed_data.py
terraform/: README.md  backend.tf  dev.tfvars  main.tf  outputs.tf  prod.tfvars  variables.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py
tests/integration/: test_auth_api.py
tests/load/: __init__.py  locustfile.py
tests/unit/: test_auth_service.py  test_cache_service.py  test_repositories.py
